theming system, offers page data and scaffold, base styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,9 @@
+@import './normalize';
+@import './mixins';
+@import './variables';
+@import './themes';
+
+@import './icons';
 @import './walletAdapter';
 
 body {
