--- a/styles/_layoutTop.scss
+++ b/styles/_layoutTop.scss
@@ -15,9 +15,10 @@
     @include theme-aware('color', 'color-content');
     text-decoration: none;
     font-size: $tp-lg;
-    padding: 4px 8px;
+    padding: 4px 8px 5px 8px;
     margin-right: 12px;
     transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+    border-radius: 4px;
 
     &:hover {
       @include theme-aware('background-color', 'color-accent');
@@ -25,7 +26,7 @@
 
     &.active {
       @include theme-aware('background-color', 'color-primary');
-      @include theme-aware('color', 'color-content');
+      @include theme-aware('color', 'color-label');
     }
   }
 
