--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,11 +6,13 @@
 @import './themes';
 
 @import './icons';
+@import './buttons';
 @import './tooltip';
 @import './walletAdapter';
 @import './layout';
 @import './layoutTop';
 @import './userToolbox';
+@import './offersTop';
 
 * {
   box-sizing: border-box;
@@ -18,12 +20,27 @@
 
 body {
   @include theme-aware('background-color', 'color-background');
+  @include theme-aware('background-image', 'bg-home');
+  background-repeat: no-repeat;
+  background-position: top right;
   @include theme-aware('color', 'color-primary');
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
   width: 100%;
+  transition: background 0.8s ease-in-out;
+}
+
+.home-bg-bottom {
+  display: inline-block;
+  width: 916px;
+  height: 620px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  @include theme-aware('background-image', 'bg-home-bottom');
+  background-repeat: no-repeat;
 }
 
 h1,
@@ -31,10 +48,10 @@ h2,
 h3,
 h4 {
   font-family: 'Red Hat Display';
-  @include theme-aware('color', 'color-primary');
+  @include theme-aware('color', 'color-content');
 }
 
 a {
-  @include theme-aware('color', 'color-primary');
+  @include theme-aware('color', 'color-content');
   transition: color 0.5s;
 }
