--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -24,6 +24,7 @@ $themes: (
     color-accentDark: #13072b,
     color-content: #ffffff,
     color-label: #ffffff,
+    color-border: #d0e5f2,
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png')
   )
