--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -10,6 +10,7 @@ $themes: (
     color-accentDark: #ffffff,
     color-content: #210d48,
     color-label: #ffffff,
+    color-input-text: #210d48,
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png')
   ),
@@ -24,6 +25,7 @@ $themes: (
     color-accentDark: #13072b,
     color-content: #ffffff,
     color-label: #ffffff,
+    color-input-text: #210d48,
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png')
   )
