--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,8 +12,9 @@
 @import './layout';
 @import './layoutTop';
 @import './userToolbox';
-@import './offersPage/offersTop';
 @import './filter';
+@import './offersPage/offersTop';
+@import './offersPage/offersGrid';
 
 * {
   box-sizing: border-box;
