--- a/styles/_filter.scss
+++ b/styles/_filter.scss
@@ -44,6 +44,10 @@
       @include theme-aware('color', 'color-content');
     }
 
+    span {
+      @include theme-aware('color', 'color-label');
+    }
+
     input[type='number'] {
       width: 80%;
       border-radius: $brd-rds-sm;
