--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -1,6 +1,6 @@
 .offers-grid {
   width: 100%;
-  margin-top: 30px;
+  margin: 30px 0 60px 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -10,6 +10,42 @@
     border-radius: $brd-rds-sm;
     -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    position: relative;
+
+    .hover-data {
+      position: absolute;
+      display: flex;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      @include theme-aware('background-color', 'bg-overlay-bright');
+      z-index: 1;
+      padding: 20px;
+      justify-content: space-evenly;
+
+      .hover-data-item {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        .label {
+          font-size: $tp-sm;
+        }
+
+        .content {
+          font-size: $tp-md;
+          font-weight: $wg-bd;
+        }
+
+        &:nth-child(2) {
+          text-align: center;
+        }
+
+        &:last-child {
+          text-align: right;
+        }
+      }
+    }
 
     img {
       border-radius: $brd-rds-sm;
