--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -27,6 +27,10 @@
   button:last-child {
     margin-left: 20px;
   }
+
+  button.active {
+    @include theme-aware('background-color', 'color-accent');
+  }
 }
 
 .offers-filters {
