--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -13,7 +13,9 @@ $themes: (
     color-input-text: #210d48,
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png'),
-    bg-overlay-bright: rgba(46, 19, 210, 0.8)
+    bg-overlay-bright: rgba(46, 19, 210, 0.8),
+    bg-table: rgba(33, 13, 72, 0.75),
+    bg-table-hover: rgba(72, 38, 136, 0.75)
   ),
   dark: (
     color-background: #210d48,
@@ -29,6 +31,8 @@ $themes: (
     color-input-text: #210d48,
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png'),
-    bg-overlay-bright: rgba(46, 19, 210, 0.8)
+    bg-overlay-bright: rgba(46, 19, 210, 0.8),
+    bg-table: rgba(33, 13, 72, 0.75),
+    bg-table-hover: rgba(72, 38, 136, 0.75)
   )
 );
