--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,6 +30,7 @@ body {
   @include theme-aware('background-image', 'bg-home');
   background-repeat: no-repeat;
   background-position: top right;
+  background-size: 40%;
   @include theme-aware('color', 'color-primary');
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
@@ -48,6 +49,8 @@ body {
   left: 0;
   @include theme-aware('background-image', 'bg-home-bottom');
   background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 40%;
   z-index: -1;
 }
 
