--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -31,6 +31,10 @@
   button.active {
     @include theme-aware('background-color', 'color-accent');
   }
+
+  button {
+    @include theme-aware('color', 'color-content');
+  }
 }
 
 .offers-filters {
