--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -11,6 +11,7 @@ $themes: (
     color-content: #210d48,
     color-label: #ffffff,
     color-input-text: #210d48,
+    color-orange: #ed8e19,
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
@@ -30,6 +31,7 @@ $themes: (
     color-label: #ffffff,
     color-border: #d0e5f2,
     color-input-text: #210d48,
+    color-orange: #ed8e19,
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
