--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -6,8 +6,10 @@
 
 .offer-root:hover {
   .offer-container {
-    @include theme-aware('background-color', 'color-primary');
-    @include theme-aware('color', 'color-accentDark');
+    @include theme-aware('background-color', 'color-accent');
+    -moz-box-shadow: 2px 3px 10px -1px rgba(36, 17, 154, 1);
+    box-shadow: 2px 3px 10px -1px rgba(36, 17, 154, 1);
+    // @include theme-aware('color', 'color-accentDark');
   }
 }
 
@@ -16,12 +18,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  @include theme-aware('background-color', 'color-accent');
+  @include theme-aware('background-color', 'color-accentDim');
   @include theme-aware('color', 'color-content');
   padding: 16px;
   border-radius: 6px 6px 0 0;
   cursor: pointer;
   border-bottom: 1px solid #94b0c2;
+  -moz-box-shadow: 2px 3px 10px -1px rgba(19, 7, 43, 1);
+  box-shadow: 2px 3px 10px -1px rgba(19, 7, 43, 1);
+  transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 
   p {
     font-size: 12px;
@@ -71,6 +76,11 @@
   width: 100%;
   height: 38px;
   background: linear-gradient(180deg, #4e9cdb 0%, #2e13d2 100%);
+  font-family: 'Red Hat Display';
+  font-weight: $wg-hv;
+  text-transform: uppercase;
+  @include theme-aware('color', 'color-label');
+  text-shadow: 0px 2px 2px #13072b;
   border: none;
   border-radius: 0 0 6px 6px;
   cursor: pointer;
