--- a/styles/_userToolbox.scss
+++ b/styles/_userToolbox.scss
@@ -2,7 +2,7 @@
   display: flex;
   margin-top: 14px;
 
-  @media (max-width: $bp-phone) {
+  @media (max-width: $bp-tablet) {
     width: 100vw;
     padding: 0 20px;
     justify-content: center;
