--- a/styles/main.scss
+++ b/styles/main.scss
@@ -55,7 +55,7 @@ body {
   background-size: 40%;
   z-index: -1;
 
-  @media (max-width: $bp-phone) {
+  @media (max-width: $bp-tablet) {
     width: 100vw;
     height: 100vh;
   }
