--- a/styles/offersPage/_offersPagination.scss
+++ b/styles/offersPage/_offersPagination.scss
@@ -26,7 +26,7 @@
     display: contents;
   }
 
-  @media (max-width: $bp-phone) {
+  @media (max-width: $bp-tablet) {
     width: 100vw;
     flex-direction: column;
     text-align: center;
