--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -19,7 +19,7 @@
     }
   }
 
-  @media (max-width: $bp-phone) {
+  @media (max-width: $bp-tablet) {
     flex-direction: column;
     width: 100vw;
     position: relative;
@@ -56,7 +56,7 @@
     @include theme-aware('color', 'color-content');
   }
 
-  @media (max-width: $bp-phone) {
+  @media (max-width: $bp-tablet) {
     margin: 30px 10px 20px;
 
     button {
@@ -104,7 +104,7 @@
     }
   }
 
-  @media (max-width: $bp-phone) {
+  @media (max-width: $bp-tablet) {
     &.active {
       width: 100vw;
       flex-direction: column;
