--- a/styles/_layoutTop.scss
+++ b/styles/_layoutTop.scss
@@ -37,6 +37,7 @@
     margin-right: 12px;
     transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
     border-radius: 4px;
+    height: 31px;
 
     &:hover {
       @include theme-aware('background-color', 'color-accent');
@@ -57,6 +58,7 @@
     justify-content: center;
 
     li a {
+      height: auto;
       padding: 8px 15px 9px 15px;
     }
   }
