--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -27,6 +27,9 @@
   -moz-box-shadow: 2px 3px 10px -1px rgba(19, 7, 43, 1);
   box-shadow: 2px 3px 10px -1px rgba(19, 7, 43, 1);
   transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  animation: fadeInAnimation ease 0.8s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 
   p {
     font-size: 12px;
