--- a/styles/singleOffer/_header.scss
+++ b/styles/singleOffer/_header.scss
@@ -10,6 +10,12 @@
   align-items: center;
   padding-bottom: 86px;
   padding-top: 94px;
+  @media (max-width: $bp-tablet) {
+    width: 100vw;
+    flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
 }
 
 .nft-info {
@@ -20,6 +26,12 @@
   animation: fadeInAnimation ease 0.8s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+
+  @media (max-width: $bp-tablet) {
+    width: 100vw;
+    flex-direction: column;
+    height: auto;
+  }
 }
 
 .nft-image {
@@ -35,6 +47,10 @@
   animation: fadeInAnimation ease 0.8s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+
+  @media (max-width: $bp-tablet) {
+    margin: 0 0 30px 0;
+  }
 }
 
 .nft-info-name {
@@ -42,17 +58,33 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   p {
     font-size: 18px;
     font-weight: 400;
     @include theme-aware('color', 'color-content');
   }
+
   h1 {
     @include theme-aware('color', 'color-primary');
     font-size: 72px;
     font-weight: 700;
     margin: 0;
     line-height: 65px;
+  }
+
+  @media (max-width: $bp-tablet) {
+    padding: 0 20px 0;
+    margin-bottom: 30px;
+
+    h1 {
+      font-size: $tp-xl;
+      line-height: calc($tp-xl + 2px);
+    }
+
+    p {
+      margin-bottom: 10px;
+    }
   }
 }
 
@@ -75,5 +107,9 @@
     &:last-child {
       margin: 0 0 6px 0;
     }
+  }
+
+  @media (max-width: $bp-tablet) {
+    margin: 0 20px;
   }
 }
