--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -106,8 +106,10 @@
 
   @media (max-width: $bp-tablet) {
     &.active {
-      width: 100vw;
+      width: 95vw;
       flex-direction: column;
+      padding: 15px;
+      margin: 0 2.5vw;
 
       .filter-generic {
         margin: 5px 0 15px 0;
