hide table view on mobile

--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -65,6 +65,10 @@
       &:last-child {
         margin-left: 13px;
       }
+
+      &.btn--table {
+        display: none;
+      }
     }
   }
 }
