--- a/styles/footer/_footer.scss
+++ b/styles/footer/_footer.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   border-top: 2px solid;
   padding: 20px 0 0 0;
+  margin: 70px 0 0 0;
   @include theme-aware('border-color', color-primary);
 }
 
@@ -40,6 +41,23 @@
     padding-bottom: 6px;
     a {
       text-decoration: none;
+      text-transform: capitalize;
     }
+    a:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+  }
+}
+
+@media (max-width: $bp-phone) {
+  .footer-links {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .community-section {
+    text-align: center;
+    padding: 0 0 24px 0;
   }
 }
