--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -32,8 +32,8 @@ $themes: (
     color-border: #d0e5f2,
     color-input-text: #210d48,
     color-orange: #ed8e19,
-    bg-home: url('/home_bg.png'),
-    bg-home-bottom: url('/home_bg_bottom.png'),
+    bg-home: url('/home_bg2-dark.png'),
+    bg-home-bottom: url('/home_bg2-bottom-dark.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
     bg-table: rgba(33, 13, 72, 0.75),
     bg-table-hover: rgba(72, 38, 136, 0.75)
