visible headin on single nft page

--- a/styles/singleOffer/_header.scss
+++ b/styles/singleOffer/_header.scss
@@ -71,6 +71,7 @@
     font-weight: 700;
     margin: 0;
     line-height: 65px;
+    text-shadow: 0px 2px 8px #13072b;
   }
 
   @media (max-width: $bp-tablet) {
