filters container shadow

--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -90,6 +90,7 @@
     transform: scaleY(1);
     height: auto;
     padding: 30px;
+    box-shadow: 0px 9px 10px 0px rgba(19, 7, 43, 1);
   }
 
   .filter-generic {
