wallet error handling on store side

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,6 +23,7 @@
 @import './offersPage/offersPagination';
 @import './blobLoader';
 @import './footer/footer';
+@import './myOffers/_myOffersTop';
 
 body {
   @include theme-aware('background-color', 'color-background');
