base scaffold for My Offers page

--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -5,6 +5,7 @@
   font-size: $tp-md;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
+  text-align: center;
 
   &--md {
     height: 38px;
