--- a/styles/myOffers/_myOffersTop.scss
+++ b/styles/myOffers/_myOffersTop.scss
@@ -1,9 +1,31 @@
 .my-offers-top {
   width: 100%;
   display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
 
-  .wallet-icon {
-    width: 32px;
-    height: 32px;
+  &__heading {
+    .wallet-label {
+      font-size: $tp-sm;
+      @include theme-aware('color', 'color-secondary');
+    }
+    h2 {
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  &__toolbox {
+    display: flex;
+    padding-top: 8px;
+
+    button {
+      margin-right: 15px;
+      text-transform: uppercase;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 }
