--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -32,6 +32,7 @@ $themes: (
     color-border: #d0e5f2,
     color-input-text: #210d48,
     color-orange: #ed8e19,
+    color-button-disabled: #371c6b,
     bg-home: url('/home_bg2-dark.png'),
     bg-home-bottom: url('/home_bg2-bottom-dark.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
