--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -29,6 +29,7 @@ $themes: (
     color-accentDark: #13072b,
     color-content: #ffffff,
     color-label: #ffffff,
+    color-loan: #2c1b4b,
     color-border: #d0e5f2,
     color-input-text: #210d48,
     color-orange: #ed8e19,
