add icons, create reveal

--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -29,7 +29,7 @@
 }
 
 .icon--copy {
-  background-image: url('/icons/copy-icon.svg');
+  background-image: url('../constants/icons/svg/copy.svg');
 }
 
 .icon--cross {
