--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,7 +26,8 @@
 @import './Lightboxes/NFTCollateral';
 @import './myOffers/_myOffersTop';
 @import './myOffers/myOffersNftList';
-
+@import './lightbox';
+@import './Lightboxes/createLoan';
 body {
   @include theme-aware('background-color', 'color-background');
   @include theme-aware('background-image', 'bg-home');
