--- a/styles/Lightboxes/_createLoan.scss
+++ b/styles/Lightboxes/_createLoan.scss
@@ -106,3 +106,27 @@
     }
   }
 }
+
+.slider-gradient::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 18px;
+  width: 18px;
+  background: #ffffff;
+  border: 2px solid #2e13d2;
+  border-radius: 50%;
+  box-sizing: border-box;
+  cursor: pointer;
+  margin-top: -5px;
+  margin-left: 0px;
+}
+
+.slider-gradient::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  background: linear-gradient(90deg, #c1cefd 0%, #5472d8 48.44%, #2e13d2 100%);
+  border-radius: 8px;
+}
+
+.slider-gradient::-moz-range-track {
+  background: linear-gradient(90deg, #c1cefd 0%, #5472d8 48.44%, #2e13d2 100%);
+}
