--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -9,10 +9,11 @@
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 
-  &-empty {
+  &--empty {
     width: 100%;
     display: flex;
     justify-content: center;
+    text-align: center;
 
     .no-offers {
       width: 100%;
