--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -16,7 +16,10 @@ $themes: (
     bg-home-bottom: url('/home_bg_bottom.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
     bg-table: rgba(33, 13, 72, 0.75),
-    bg-table-hover: rgba(72, 38, 136, 0.75)
+    bg-table-hover: rgba(72, 38, 136, 0.75),
+    single-offer-heading: #e00a7f,
+    single-offer-meta-bg: #b4ace2,
+    single-offer-meta-label: #ffffff
   ),
   dark: (
     color-background: #210d48,
@@ -38,6 +41,9 @@ $themes: (
     bg-home-bottom: url('/home_bg2-bottom-dark.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
     bg-table: rgba(33, 13, 72, 0.75),
-    bg-table-hover: rgba(72, 38, 136, 0.75)
+    bg-table-hover: rgba(72, 38, 136, 0.75),
+    single-offer-heading: #ffffff,
+    single-offer-meta-bg: #482688,
+    single-offer-meta-label: #8c70bf
   )
 );
