new styles for single offer page

--- a/styles/_showOnHover.scss
+++ b/styles/_showOnHover.scss
@@ -11,6 +11,10 @@
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
   }
 
+  &__label {
+    overflow-wrap: anywhere;
+  }
+
   &__elements {
     display: hidden;
     opacity: 0;
