--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -19,7 +19,9 @@ $themes: (
     bg-table-hover: rgba(72, 38, 136, 0.75),
     single-offer-heading: #e00a7f,
     single-offer-meta-bg: #b4ace2,
-    single-offer-meta-label: #ffffff
+    single-offer-meta-label: #ffffff,
+    single-offer-offer-bg: linear-gradient(180deg, #d6c0ff 0%, #b4ace2 100%),
+    single-offer-offer-bg-hover: linear-gradient(180deg, #d6c0ff 80%, #b4ace2 100%)
   ),
   dark: (
     color-background: #210d48,
@@ -44,6 +46,8 @@ $themes: (
     bg-table-hover: rgba(72, 38, 136, 0.75),
     single-offer-heading: #ffffff,
     single-offer-meta-bg: #482688,
-    single-offer-meta-label: #8c70bf
+    single-offer-meta-label: #8c70bf,
+    single-offer-offer-bg: linear-gradient(180deg, #402a6b 0%, #4e2798 100%),
+    single-offer-offer-bg-hover: linear-gradient(180deg, #402a6b 0%, #4e2798 30%)
   )
 );
