--- a/styles/main.scss
+++ b/styles/main.scss
@@ -49,6 +49,10 @@ body {
   transition: background 0.8s ease-in-out;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .home-bg-bottom {
   display: inline-block;
 
