--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -1,9 +1,21 @@
-.offer-root:hover {
-  .offer-container {
-    @include theme-aware('background-color', 'color-accent');
-    -moz-box-shadow: 2px 3px 10px -1px rgba(36, 17, 154, 1);
-    box-shadow: 2px 3px 10px -1px rgba(36, 17, 154, 1);
-    // @include theme-aware('color', 'color-accentDark');
+.offer-root {
+  border-radius: 8px;
+  padding: 2px;
+  background: linear-gradient(180deg, rgba(44, 19, 208, 1) 0%, rgba(44, 19, 208, 0) 100%);
+  -moz-box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.15);
+
+  &:hover {
+    -moz-box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.15);
+
+    .offer-container {
+      @include theme-aware('background', 'single-offer-offer-bg-hover');
+    }
+  }
+
+  @media (max-width: $bp-tablet) {
+    padding: 0;
   }
 }
 
@@ -12,14 +24,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  @include theme-aware('background-color', 'color-accentDim');
+  @include theme-aware('background', 'single-offer-offer-bg');
   @include theme-aware('color', 'color-content');
   padding: 16px;
   border-radius: 6px 6px 0 0;
   cursor: pointer;
-  border-bottom: 1px solid #94b0c2;
-  -moz-box-shadow: 2px 3px 10px -1px rgba(19, 7, 43, 1);
-  box-shadow: 2px 3px 10px -1px rgba(19, 7, 43, 1);
   transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   animation: fadeInAnimation ease 0.8s;
   animation-iteration-count: 1;
@@ -81,13 +90,16 @@
 .lend-btn {
   width: 100%;
   height: 38px;
-  background: linear-gradient(180deg, #4e9cdb 0%, #2e13d2 100%);
+  @include theme-aware('background-color', 'color-primary');
   font-family: 'Red Hat Display';
   font-weight: $wg-hv;
-  text-transform: uppercase;
   @include theme-aware('color', 'color-label');
-  text-shadow: 0px 2px 2px #13072b;
   border: none;
-  border-radius: 0 0 6px 6px;
+  border-radius: 6px;
   cursor: pointer;
+  transition: background 0.3 ease-in-out;
+
+  &:hover {
+    @include theme-aware('background-color', 'color-primary-dark');
+  }
 }
