--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -33,7 +33,7 @@
 }
 
 .icon--cross {
-  background-image: url('/icons/cross-icon.svg');
+  @include theme-aware('background-image', 'icon-cross');
 }
 .icon--cross--black {
   background-image: url('/icons/cross-icon-black.svg');
