create loan lightbox styles

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -10,6 +10,8 @@ $themes: (
     color-accentDark: #ffffff,
     color-content: #210d48,
     color-label: #ffffff,
+    color-loan: #2c1b4b,
+    color-border: #d0e5f2,
     color-input-text: #210d48,
     color-orange: #ed8e19,
     bg-home: url('/home_bg.png'),
