--- a/styles/Lightboxes/_createLoan.scss
+++ b/styles/Lightboxes/_createLoan.scss
@@ -1,132 +1,194 @@
-.create-loan-lightbox {
-  .lightbox__container {
-    @include theme-aware('background-color', 'color-accent');
+.create-offer-container {
+  h1 {
+    @include theme-aware('color', 'color-primary');
+    padding: 0 0 16px 0;
+  }
+}
+
+.create-offer {
+  padding: 0 20px 24px;
+}
+
+.offer-form {
+  display: flex;
+  flex-direction: column;
+
+  span {
+    font-size: 14px;
+    @include theme-aware('color', 'color-primary');
   }
 
-  .create-offer-container {
-    h1 {
-      @include theme-aware('color', 'color-primary');
-      padding: 0 0 16px 0;
-    }
-  }
-  .offer-form {
+  .form-line {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    margin-bottom: 24px;
 
-    span {
-      font-size: 14px;
-      @include theme-aware('color', 'color-primary');
-    }
-
-    & > * {
+    div:nth-child(1) {
       display: flex;
-      align-items: center;
-      margin-bottom: 24px;
-
-      & div:nth-child(1) {
-        display: flex;
-        flex-direction: column;
-        width: 315px;
-        margin-right: 15px;
-      }
-      & div:nth-child(2) {
-        width: 128px;
-      }
+      flex-direction: column;
+      width: 315px;
+      margin-right: 15px;
     }
 
-    & input,
-    & select {
-      margin-top: 6px;
-      border: 2px solid;
-      @include theme-aware('border-color', 'color-primary');
-      padding: 9px;
-      border-radius: 6px;
-      height: 42px;
-      width: 100%;
+    div:nth-child(2) {
+      width: 128px;
+    }
+  }
+
+  .input-text,
+  select {
+    margin-top: 6px;
+    border: 2px solid;
+    @include theme-aware('border-color', 'color-primary');
+    @include theme-aware('background-color', 'color-accent');
+    @include theme-aware('color', 'color-label');
+    padding: 9px;
+    border-radius: 6px;
+    height: 42px;
+    width: 100%;
+  }
+
+  p {
+    margin-top: 6px;
+    padding: 9px 0;
+    height: 42px;
+    width: 100%;
+  }
+
+  select {
+    @include theme-aware('background-color', 'color-accent');
+    @include theme-aware('color', 'color-label');
+    margin-top: 5px;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .form-APR {
+    & > div:nth-child(1) {
+      width: 222px;
     }
 
+    & > div:nth-child(2) {
+      width: 203px;
+    }
     & p {
-      margin-top: 6px;
-      padding: 9px 0;
-      height: 42px;
+      font-size: 24px;
       width: 100%;
     }
+  }
 
-    [type='range'] {
+  input[type='range'] {
+    margin-top: 10px;
+  }
+
+  button {
+    padding: 15px;
+    text-align: center;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    @include theme-aware('background-color', 'color-primary');
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.3 ease-in-out;
+
+    &:hover {
+      @include theme-aware('background-color', 'color-primary-dark');
+    }
+
+    .btn-content {
+      width: 100%;
       padding: 0;
-      border: none;
-      background: linear-gradient(90deg, #c1cefd 0%, #5472d8 48.44%, #2e13d2 100%);
-    }
-
-    & select {
-      @include theme-aware('background-color', 'color-content');
-      margin-top: 5px;
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    .form-APR {
-      & > div:nth-child(1) {
-        width: 222px;
-      }
-
-      & > div:nth-child(2) {
-        width: 203px;
-      }
-      & p {
-        font-size: 24px;
-        width: 100%;
-      }
-    }
-
-    button {
-      padding: 15px;
-      text-align: center;
       margin: 0;
-      display: flex;
-      align-items: center;
-      background: linear-gradient(180deg, #5472d8 0%, #2e13d2 100%);
-      border: none;
-      border-radius: 6px;
 
-      .btn-content {
-        width: 100%;
+      & p {
         padding: 0;
         margin: 0;
-
-        & p {
-          padding: 0;
-          margin: 0;
-          height: auto;
-          @include theme-aware('color', 'color-content');
-        }
+        height: auto;
+        @include theme-aware('color', 'color-content');
       }
     }
   }
-}
 
-.slider-gradient::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  height: 18px;
-  width: 18px;
-  background: #ffffff;
-  border: 2px solid #2e13d2;
-  border-radius: 50%;
-  box-sizing: border-box;
-  cursor: pointer;
-  margin-top: -5px;
-  margin-left: 0px;
-}
+  input[type='range'] {
+    -webkit-appearance: none;
+    margin-right: 15px;
+    width: 100%;
+    height: 7px;
+    @include theme-aware('background-color', 'color-accentDark');
+    border-radius: 5px;
+    background-size: 70% 100%;
+    background-repeat: no-repeat;
+  }
 
-.slider-gradient::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8px;
-  background: linear-gradient(90deg, #c1cefd 0%, #5472d8 48.44%, #2e13d2 100%);
-  border-radius: 8px;
-}
+  /* Input Thumb */
+  input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    @include theme-aware('background-color', 'color-primary');
+    cursor: ew-resize;
+    box-shadow: 0 0 2px 0 #555;
+    transition: background 0.3s ease-in-out;
+  }
 
-.slider-gradient::-moz-range-track {
-  background: linear-gradient(90deg, #c1cefd 0%, #5472d8 48.44%, #2e13d2 100%);
+  input[type='range']::-moz-range-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    @include theme-aware('background-color', 'color-primary');
+    cursor: ew-resize;
+    box-shadow: 0 0 2px 0 #555;
+    transition: background 0.3s ease-in-out;
+  }
+
+  input[type='range']::-ms-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    @include theme-aware('background-color', 'color-primary');
+    cursor: ew-resize;
+    box-shadow: 0 0 2px 0 #555;
+    transition: background 0.3s ease-in-out;
+  }
+
+  input[type='range']::-webkit-slider-thumb:hover {
+    @include theme-aware('background-color', 'color-primary');
+  }
+
+  input[type='range']::-moz-range-thumb:hover {
+    @include theme-aware('background-color', 'color-primary');
+  }
+
+  input[type='range']::-ms-thumb:hover {
+    @include theme-aware('background-color', 'color-primary');
+  }
+
+  /* Input Track */
+  input[type='range']::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+  }
+
+  input[type='range']::-moz-range-track {
+    -webkit-appearance: none;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+  }
+
+  input[type='range']::-ms-track {
+    -webkit-appearance: none;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+  }
 }
