--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,7 +31,7 @@
 @import './myOffers/_myOffersTop';
 @import './myOffers/myOffersNftList';
 
-@import './lightboxes/lightboxBase';
+@import './lightboxBase';
 @import './lightboxes/NFTCollateral';
 @import './lightboxes/createLoan';
 
