fixing fonts loading

--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -91,7 +91,7 @@
   width: 100%;
   height: 38px;
   @include theme-aware('background-color', 'color-primary');
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', sans-serif;
   font-weight: $wg-hv;
   @include theme-aware('color', 'color-label');
   border: none;
