--- a/styles/main.scss
+++ b/styles/main.scss
@@ -98,7 +98,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', sans-serif;
   @include theme-aware('color', 'color-content');
 }
 
