--- a/styles/myOffers/_myOffersTop.scss
+++ b/styles/myOffers/_myOffersTop.scss
@@ -8,10 +8,47 @@
     .wallet-label {
       font-size: $tp-sm;
       @include theme-aware('color', 'color-secondary');
+
+      @media (max-width: $bp-tablet) {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+      }
     }
     h2 {
       margin: 0;
       padding: 0;
+
+      @media (max-width: $bp-tablet) {
+        text-align: center;
+        margin-bottom: 20px;
+        padding: 0 20px;
+      }
+    }
+
+    .show-on-hover {
+      @media (max-width: $bp-tablet) {
+        width: 100%;
+        flex-direction: column;
+      }
+
+      .show-on-hover__elements__wrap {
+        @media (max-width: $bp-tablet) {
+          width: 100%;
+          text-align: center;
+          justify-items: center;
+          justify-content: center;
+          margin-top: 5px;
+        }
+      }
+
+      .show-on-hover__label,
+      .how-on-hover__elements {
+        @media (max-width: $bp-tablet) {
+          width: 100%;
+        }
+      }
     }
   }
 
@@ -27,6 +64,14 @@
         margin-right: 0;
       }
     }
+
+    @media (max-width: $bp-tablet) {
+      justify-content: center;
+    }
+  }
+
+  @media (max-width: $bp-tablet) {
+    flex-direction: column;
   }
 }
 
