--- a/styles/_NFTCollateral.scss
+++ b/styles/_NFTCollateral.scss
@@ -16,6 +16,14 @@
   @include theme-aware(color, 'color-content');
   border-radius: 6px;
   width: 1023px;
+
+  @media (max-width: $bp-tablet) {
+    width: 100%;
+    height: 100vh;
+    padding: 10px 0 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
 }
 
 .NFT-lb-header {
@@ -24,10 +32,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   & h1 {
     font-size: 36px;
     font-weight: 700;
     line-height: 0px;
+
+    @media (max-width: $bp-tablet) {
+      line-height: normal;
+    }
+  }
+
+  @media (max-width: $bp-tablet) {
+    flex-direction: column;
   }
 }
 
@@ -36,6 +53,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
+
+  @media (max-width: $bp-tablet) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .collateral-list-item {
@@ -103,6 +125,12 @@
   font-weight: 700;
   color: #ffffff;
   cursor: pointer;
+
+  @media (max-width: $bp-tablet) {
+    position: absolute;
+    bottom: 90px;
+    margin: 0;
+  }
 
   &:hover {
     @include theme-aware('background-color', 'color-primary-dark');
