--- a/styles/_createLoan.scss
+++ b/styles/_createLoan.scss
@@ -33,6 +33,16 @@
     div:nth-child(2) {
       width: 128px;
     }
+
+    @media (max-width: $bp-tablet) {
+      flex-direction: column;
+
+      div:nth-child(1),
+      div:nth-child(2) {
+        width: 100%;
+        margin: 0 0 30px 0;
+      }
+    }
   }
 
   .input-text,
@@ -68,10 +78,17 @@
   .form-APR {
     & > div:nth-child(1) {
       width: 222px;
+      @media (max-width: $bp-tablet) {
+        width: 100%;
+      }
     }
 
     & > div:nth-child(2) {
       width: 203px;
+
+      @media (max-width: $bp-tablet) {
+        width: 100%;
+      }
     }
     & p {
       font-size: 24px;
