--- a/styles/_lightboxBase.scss
+++ b/styles/_lightboxBase.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(27, 18, 86, 0.8);
-  z-index: 9999;
+  z-index: 10000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,6 +25,11 @@
     animation: fadeInAnimation ease 0.8s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+
+    @media (max-width: $bp-tablet) {
+      width: 100%;
+      height: 100%;
+    }
 
     .lightbox__close {
       cursor: pointer;
