--- a/styles/myOffers/_myOffersNftList.scss
+++ b/styles/myOffers/_myOffersNftList.scss
@@ -213,6 +213,10 @@
         margin-left: 20px;
         margin-bottom: 15px;
 
+        @media (max-width: $bp-tablet) {
+          margin-left: 0;
+        }
+
         &:last-child {
           margin-bottom: 0;
         }
