--- a/styles/main.scss
+++ b/styles/main.scss
@@ -34,6 +34,7 @@
 @import './lightboxBase';
 @import './NFTCollateral';
 @import './createLoan';
+@import './myOffers/connectWallet';
 
 body {
   @include theme-aware('background-color', 'color-background');
