--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,6 +12,8 @@
 @import './walletAdapter';
 @import './layout';
 @import './layoutTop';
+@import './layoutTopMobile';
+@import './menuShowButton';
 @import './userToolbox';
 @import './filter';
 @import './blobLoader';
