active loan fix

--- a/styles/singleOffer/_page.scss
+++ b/styles/singleOffer/_page.scss
@@ -24,3 +24,9 @@
   display: flex;
   justify-content: center;
 }
+
+.single-offer-active {
+  width: 100%;
+  text-align: center;
+  font-size: $tp-xl;
+}
